# raytracer

framework/: box.cpp  box.hpp  camera.cpp  camera.hpp  color.hpp  composite.cpp  composite.hpp  intersection.cpp  intersection.hpp  light.hpp  material.hpp  ray.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.hpp  sdfloader.cpp  sdfloader.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
source/: CMakeLists.txt  animation.cpp  animation.txt  material_input.txt  raytracer.cpp  sdf_generator.cpp  sdf_scene.txt  tests.cpp
